# rustp

./: Cargo.toml  Dockerfile  Dockerfile.i32  README.md  parsed.md  prove_test.sh
.github/workflows/: rust.yml
prove_examples/: list.rs  no_overflow_sum.rs  overflow_sum.rs  remainder_partial.rs  swap.rs
prover/: Makefile  requirements.in  requirements.txt
prover/src/: example.json  parser.py  prove.py  rast.py
rustp/: Cargo.toml
rustp/src/: ast.rs  example  fun.lalrpop  main.rs  parser.rs
rustp/src/parser/: astp.rs  boolean.rs  math.rs
src/: ast.rs  context.rs  example  example.rs  example_all  main.rs  parser.rs  prover.rs  simplifier.rs  validator.rs
src/ast/: tests.rs
src/parser/: astp.rs  boolean.rs  math.rs
src/parser/astp/: tests.rs
src/parser/boolean/: tests.rs
src/parser/math/: tests.rs
src/prover/: bitvector.rs  int.rs  tests.rs
src/simplifier/: types.rs
src/validator/: tests.rs
