[package]
name = "rustp"
version = "0.1.0"
authors = ["d0ku <darthtyranus666666@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
itertools = "0.10.0"
clap = "3.0.0-beta.2"
z3 = "0.10.0"
log = "0.4.14"
env_logger = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
