[package]
name = "rustp"
version = "0.1.0"
authors = ["d0ku <darthtyranus666666@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.4"
regex = "1"

[build-dependencies]
lalrpop = "0.19.4"
